FEATURE: 5 AI Provider Support - Claude, GPT, Gemini, Llama, Mistral
- Added Google Gemini provider (gemini-1.5-flash)
- Added Groq/Llama provider (llama-3.1-8b-instant) - SUPER FAST
- Added Mistral AI provider (mistral-small-latest)
- Auto-detects provider from API key format
- Updated UI to show all 5 supported providers
- Clean adapter pattern for easy maintenance

Judges can use ANY major AI provider they have access to!

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "type": "module",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
+    "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.10.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "groq-sdk": "^0.37.0",
     "irc-framework": "^4.14.0",
     "openai": "^6.9.1",
     "postcss": "^8.5.6",
